docs: update README with java 19 info